<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/day_of_week_monday"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/monday" />
        <item
            android:id="@+id/day_of_week_tuesday"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/tuesday" />
        <item
            android:id="@+id/day_of_week_wednesday"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/wednesday" />
        <item
            android:id="@+id/day_of_week_thursday"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/thursday" />
        <item
            android:id="@+id/day_of_week_friday"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/friday" />
    </group>
</menu>